--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@
 
 /public/assets
 .byebug_history
+/config/environments/development.rb
+/app/mailers/inquiry_mailer.rb
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
