--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@
 
 /public/assets
 .byebug_history
-config/environments/*
+config/environments/development
 /app/mailers/inquiry_mailer.rb
 
 # Ignore master key for decrypting credentials and more.
