--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@
 /node_modules
 /yarn-error.log
 #environments
-!config/environments/production.rb
+!config/environments/
 
 /public/assets
 .byebug_history
